@@ -4,6 +4,7 @@ c98dadcc-b796-41cf-aff2-bfa1706a5a6f /PRODUCT/1.9.0.581
 b3ce3cd9-0436-4348-8c09-106163ad9170 /PRODUCT/1.9.0.595
 e34a3f68-c604-4029-99dc-5c4822556934 /PRODUCT/1.9.0.600
 8806e4a6-c6e3-4b18-879b-2063206c46ef /PRODUCT/1.9.0.608
+f5898ebd-f30a-4cfc-9763-2a98befe6719 /PRODUCT/1.9.0.613
 fb54db39-2456-4fcc-9550-2790db663015 /REGISTRY/HKLM/Software\GNU\GnuPG/Install Directory
 ad23691b-1734-4dec-b91a-d4ff286190ea /REGISTRY/HKLM/Software\GNU\GnuPG/gpgProgram
 e0807a2f-4e70-48f8-b047-c5d3e219c3e7 /UPGRADE/1
